# avro_to_typescript

./: Cargo.toml  README.md
src/: avro_parser.rs  errors.rs  generate_ts_code.rs  generate_types.rs  main.rs  schema_converter.rs  type_converter.rs  types.rs
